# devcoffee-schema

./: .editorconfig  .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  sync.cmd  sync.ps1  sync.py
.config/rootCA/: devcoffee.ca.crt  devcoffee.ca.key  devcoffee.ca.srl
builder/devcoffee-event-schemas/: pom.xml
builder/devcoffee_schema/: pyproject.toml
builder/devcoffee_schema/src/: logger.py
builder/pyt/: README.md  pyproject.toml
builder/pyt/src/tech/devcoffee/integration/events/: __init__.py  base.py  token.py  user.py
schema/tech/devcoffee/sso/integration/events/auth/: user.authentication.succeeded.avsc
schema/tech/devcoffee/user/: user.authentication.succeeded-value.avsc  user.authentication.succeeded.avsc
schema/token/: token.issued.avsc  token.revoked.avsc
schema/user/: user.authentication.succeeded.avsc
src/devcoffee_schema/: __init__.py  config.py  register.py  worker.py
