[project]
name = "devcoffee-integration-event"
version = "1.0.0"
description = "DevCoffee events data"
authors = [{ name = "Hieu Nguyen", email = "hieu.nguyen@devcoffee.tech" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = ["pydantic>=2.12.5"]


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
